--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@ant-design/pro-components": "^2.4.15",
     "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-buddy/palette-antd": "^5.3.0",
     "antd": "^5.4.7",
@@ -19,7 +20,8 @@
     "mobx-state-tree": "^5.1.8",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "@types/ityped": "^1.0.1",
